--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Sabine Chadborn</h1>
-								<p>One of a kind jewelry, because your one of a kind<br />
-								Check out our Jellies and Bubbles! The most unique designs in all of New Orleans, made to order.</p>
+								<p>One of a kind jewelry, because your one of a kind. <br />
+								Check out my Jellies and Bubbles! The most unique designs in all of New Orleans.</p>
 							</div>
 						</div>
 						<nav>
@@ -43,10 +43,11 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- Intro -->
+						<!-- jellies -->
 							<article id="Jellies">
-								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+								<h2 class="major">Jellies</h2>
+								<span class="image main"><img src="IMG_8630.JPG" alt="" /></span>
+								<span class="image main"><img src="IMG_8666.JPG" alt="" /></span>
 								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
 							</article>
